--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pen Name-literary social media"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <!-- <link rel="stylesheet" href="../css/styles.css"> -->
